# flask_blog

./: .gitignore  LICENSE  README.md  pyproject.toml
myblog/: __init__.py  app.py  auth.py  blog.py  config.py  db.py  db_commands.py  model.py  schema.sql
myblog/static/: main.css  style.css
myblog/templates/: base.html  front.html  newpost.html  permalink.html  post.html
myblog/templates/auth/: login.html  register.html
myblog/templates/blog/: create.html  index.html  permalink.html  post.html  update.html
myblog/tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
