[project]
name = "myblog"
version = "0.1.0"
description = "A blog built with Flask, Flask-Migrate, and Flask-SQLAlchemy"
authors = [
    { name="Layla Tadjpour", email="layla.tadjpour@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12.0"

dependencies = [
    "Flask>=3.0.3",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-Migrate>=4.0.7",
    "Unidecode>=1.3.8"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["myblog"]